Cleaned up and simplified network_service, changed the structure from requests per resource to only requests that remember the resourceID; Fixed horizontal scrollbars for the most part; Slight style adjustments;

--- a/src/network/network_style.css
+++ b/src/network/network_style.css
@@ -332,7 +332,7 @@
 
 .network-graph-row.hovered .network-graph-sections-hitarea
 {
-  background-color: rgba(255, 255, 255, 0.4); /* #8a2bac */
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .network-graph-sections,
